# KANplus

./: CMakeLists.txt  main.cc
include/: AdamOptimizer.hh  BSpline.hh  KAnetwork.hh  Neuron.hh  Optimizer.hh  Tensor.hh
src/: AdamOptimizer.cc  BSpline.cc  KAnetwork.cc  Neuron.cc  Optimizer.cc
